--- a/src/template/pages/csm.hbs
+++ b/src/template/pages/csm.hbs
@@ -93,6 +93,7 @@
 <section id="section-twitter-carousel">
 <div class="wrapper">
 	<h3>CSM on Twitter</h3>
+
 	<div class="twitter-content">
 		<div>
 	  	<p>
@@ -138,6 +139,9 @@
 	  	<p class="timestamp">Nov 13</p>
 	  </div>
 	</div>
+</div>
+<div class="wrapper-additional">
+	<a href="#" class="twitter-handle">Follow @CSMNews</a>
 </div>
 </section>
 
