--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -27,12 +27,12 @@
 	</div>
 
 	<div class="menu-content">
-			<a href="./.html" class="camberwell"><span>Camberwell College of Arts</span></a>
-			<a href="./.html" class="csm"><span>Central Saint Martins</span></a>
-			<a href="./.html" class="chelsea"><span>Chelsea College of Arts</span></a>
-			<a href="./.html" class="comm"><span>London College of Communication</span></a>
-			<a href="./.html" class="fashion"><span>London College of Fashion</span></a>
-			<a href="./.html" class="wimbledon"><span>Wimbledon College of Arts</span></a>
+			<a href="javascript:void(0)" class="camberwell"><span>Camberwell College of Arts</span></a>
+			<a href="./csm.html" class="csm"><span>Central Saint Martins</span></a>
+			<a href="javascript:void(0)" class="chelsea"><span>Chelsea College of Arts</span></a>
+			<a href="javascript:void(0)" class="comm"><span>London College of Communication</span></a>
+			<a href="javascript:void(0)" class="fashion"><span>London College of Fashion</span></a>
+			<a href="javascript:void(0)" class="wimbledon"><span>Wimbledon College of Arts</span></a>
 	</div>
 </nav>
 
@@ -57,163 +57,177 @@
 	<div class="menu-content"> 
 	<div class="wrapper">
 		<ul>
-			<li><a href="#">Study</a></li>
-			<li><a href="#">Courses</a></li>
-			<li><a href="#">Foundation Diploma in Art & Design</a></li>
-			<li><a href="#">Postrgraduate Study</a></li>
-			<li><a href="#">Short Courses</a></li>
-			<li><a href="#">International</a></li>
+			<li><a href="javascript:void(0)">Study</a></li>
+			<li><a href="javascript:void(0)">Courses</a></li>
+			<li><a href="javascript:void(0)">Foundation Diploma in Art & Design</a></li>
+			<li><a href="javascript:void(0)">Postrgraduate Study</a></li>
+			<li><a href="javascript:void(0)">Short Courses</a></li>
+			<li><a href="javascript:void(0)">International</a></li>
 		</ul>
 		<ul>
-			<li><a href="#">Study Abroad</a></li>
-			<li><a href="#">Erasmus & Non-Erasmus Exchanges</a></li>
-			<li><a href="#">Language Center</a></li>
-			<li><a href="#">Open Days</a></li>
-			<li><a href="#">Apply</a></li>
-			<li><a href="#">Enrol</a></li>
+			<li><a href="javascript:void(0)">Study Abroad</a></li>
+			<li><a href="javascript:void(0)">Erasmus & Non-Erasmus Exchanges</a></li>
+			<li><a href="javascript:void(0)">Language Center</a></li>
+			<li><a href="javascript:void(0)">Open Days</a></li>
+			<li><a href="javascript:void(0)">Apply</a></li>
+			<li><a href="javascript:void(0)">Enrol</a></li>
 		</ul>
 		<ul>
-			<li><a href="#">Student Fees & Funding</a></li>
-			<li><a href="#">Student Services</a></li>
-			<li><a href="#">Library Services</a></li>
-			<li><a href="#">Term Dates</a></li>
-			<li><a href="#">Academic Regulations</a></li>
-			<li><a href="#">Accomodation</a></li>
+			<li><a href="javascript:void(0)">Student Fees & Funding</a></li>
+			<li><a href="javascript:void(0)">Student Services</a></li>
+			<li><a href="javascript:void(0)">Library Services</a></li>
+			<li><a href="javascript:void(0)">Term Dates</a></li>
+			<li><a href="javascript:void(0)">Academic Regulations</a></li>
+			<li><a href="javascript:void(0)">Accomodation</a></li>
 		</ul>
 		<ul>
-			<li><a href="#">Students' Union</a></li>
-			<li><a href="#">Facilities</a></li>
-			<li><a href="#">Widening Participation</a></li>
-			<li><a href="#">Awards Ceremonies</a></li>
-			<li><a href="#">Term Dates</a></li>
-			<li><a href="#">Summer Shows</a></li>
+			<li><a href="javascript:void(0)">Students' Union</a></li>
+			<li><a href="javascript:void(0)">Facilities</a></li>
+			<li><a href="javascript:void(0)">Widening Participation</a></li>
+			<li><a href="javascript:void(0)">Awards Ceremonies</a></li>
+			<li><a href="javascript:void(0)">Term Dates</a></li>
+			<li><a href="javascript:void(0)">Summer Shows</a></li>
 		</ul>
 	</div>
 	</div>
 </nav>
 
 <nav id="mobile-menu" class="global-menu mobile-menu">
-	 
-	<a href="#" title="Close main menu" id="mobile-menu-close" class="menu-button menu-close">Close</a>
- 
-	
 	<div class="menu-content">  
-
+		<a href="#" title="Close main menu" id="mobile-menu-close" class="menu-button menu-close">Close</a>
 		<ul>
 			<li><a href="#" class="trigger-subnav">Study<span></span></a></li>
 							
 							<ul class="menu-expanded">	
-								<li><a href="#">Courses</a></li>
-								<li><a href="#">Foundation Diploma in Art & Design</a></li>
-								<li><a href="#">Postrgraduate Study</a></li>
-								<li><a href="#">Short Courses</a></li>
-								<li><a href="#">International</a></li>
-								<li><a href="#">Study Abroad</a></li>
-								<li><a href="#">Erasmus & Non-Erasmus Exchanges</a></li>
-								<li><a href="#">Language Center</a></li>
-								<li><a href="#">Open Days</a></li>
-								<li><a href="#">Apply</a></li>
-								<li><a href="#">Enrol</a></li>
-								<li><a href="#">Student Fees & Funding</a></li>
-								<li><a href="#">Student Services</a></li>
-								<li><a href="#">Library Services</a></li>
-								<li><a href="#">Term Dates</a></li>
-								<li><a href="#">Academic Regulations</a></li>
-								<li><a href="#">Accomodation</a></li>
-								<li><a href="#">Students' Union</a></li>
-								<li><a href="#">Facilities</a></li>
-								<li><a href="#">Widening Participation</a></li>
-								<li><a href="#">Awards Ceremonies</a></li>
-								<li><a href="#">Term Dates</a></li>
-								<li><a href="#">Summer Shows</a></li>
+								<li><a href="javascript:void(0)">Courses</a></li>
+								<li><a href="javascript:void(0)">Foundation Diploma in Art & Design</a></li>
+								<li><a href="javascript:void(0)">Postrgraduate Study</a></li>
+								<li><a href="javascript:void(0)">Short Courses</a></li>
+								<li><a href="javascript:void(0)">International</a></li>
+								<li><a href="javascript:void(0)">Study Abroad</a></li>
+								<li><a href="javascript:void(0)">Erasmus & Non-Erasmus Exchanges</a></li>
+								<li><a href="javascript:void(0)">Language Center</a></li>
+								<li><a href="javascript:void(0)">Open Days</a></li>
+								<li><a href="javascript:void(0)">Apply</a></li>
+								<li><a href="javascript:void(0)">Enrol</a></li>
+								<li><a href="javascript:void(0)">Student Fees & Funding</a></li>
+								<li><a href="javascript:void(0)">Student Services</a></li>
+								<li><a href="javascript:void(0)">Library Services</a></li>
+								<li><a href="javascript:void(0)">Term Dates</a></li>
+								<li><a href="javascript:void(0)">Academic Regulations</a></li>
+								<li><a href="javascript:void(0)">Accomodation</a></li>
+								<li><a href="javascript:void(0)">Students' Union</a></li>
+								<li><a href="javascript:void(0)">Facilities</a></li>
+								<li><a href="javascript:void(0)">Widening Participation</a></li>
+								<li><a href="javascript:void(0)">Awards Ceremonies</a></li>
+								<li><a href="javascript:void(0)">Term Dates</a></li>
+								<li><a href="javascript:void(0)">Summer Shows</a></li>
 							</ul>
 
 			<li><a href="#" class="trigger-subnav">Research<span></span></a></li>
 							
 							<ul class="menu-expanded">	
-								<li><a href="#">Research Degrees</a></li>
-								<li><a href="#">UAL Staff Researchers</a></li>
-								<li><a href="#">Current Research & Projects</a></li>
-								<li><a href="#">UAL Research Centres</a></li>
-								<li><a href="#">Impact of UAL Research</a></li>
-								<li><a href="#">Researching at UAL</a></li>
-								<li><a href="#">Researching News & Events </a></li>
-								<li><a href="#">UAL: University Chairs</a></li>
-								<li><a href="#">Open Days</a></li>
-								<li><a href="#">Apply</a></li> 
+								<li><a href="javascript:void(0)">Research Degrees</a></li>
+								<li><a href="javascript:void(0)">UAL Staff Researchers</a></li>
+								<li><a href="javascript:void(0)">Current Research & Projects</a></li>
+								<li><a href="javascript:void(0)">UAL Research Centres</a></li>
+								<li><a href="javascript:void(0)">Impact of UAL Research</a></li>
+								<li><a href="javascript:void(0)">Researching at UAL</a></li>
+								<li><a href="javascript:void(0)">Researching News & Events </a></li>
+								<li><a href="javascript:void(0)">UAL: University Chairs</a></li>
+								<li><a href="javascript:void(0)">Open Days</a></li>
+								<li><a href="javascript:void(0)">Apply</a></li> 
 							</ul>	
 
 			<li><a href="#" class="trigger-subnav">Careers<span></span></a></li>
 							
 							<ul class="menu-expanded">	
-								<li><a href="#">Student Jobs & Careers</a></li>
-								<li><a href="#">Find Jobs & Internships</a></li>
-								<li><a href="#">Get Jobs Advice</a></li>
-								<li><a href="#">Events & Workshops</a></li>
-								<li><a href="#">Funding & Mentoring</a></li>
-								<li><a href="#">Freelance & Business Advice</a></li>
-								<li><a href="#">Exhibit & Sell Your Work</a></li> 
-								<li><a href="#">Employers & Partners</a></li>
-								<li><a href="#">About Careers & Employability</a></li> 
+								<li><a href="javascript:void(0)">Student Jobs & Careers</a></li>
+								<li><a href="javascript:void(0)">Find Jobs & Internships</a></li>
+								<li><a href="javascript:void(0)">Get Jobs Advice</a></li>
+								<li><a href="javascript:void(0)">Events & Workshops</a></li>
+								<li><a href="javascript:void(0)">Funding & Mentoring</a></li>
+								<li><a href="javascript:void(0)">Freelance & Business Advice</a></li>
+								<li><a href="javascript:void(0)">Exhibit & Sell Your Work</a></li> 
+								<li><a href="javascript:void(0)">Employers & Partners</a></li>
+								<li><a href="javascript:void(0)">About Careers & Employability</a></li> 
 							</ul>	
 
 			<li><a href="#" class="trigger-subnav">Alumni & Friends<span></span></a></li>
 							
 							<ul class="menu-expanded">	
-								<li><a href="#">Alumni & Friends</a></li>
-								<li><a href="#">Benefits</a></li>
-								<li><a href="#">Alumni Groups</a></li>
-								<li><a href="#">Events</a></li>
-								<li><a href="#">Inspiring Alumni</a></li>
-								<li><a href="#">Support & Donate</a></li>
-								<li><a href="#">Update Details</a></li> 
+								<li><a href="javascript:void(0)">Alumni & Friends</a></li>
+								<li><a href="javascript:void(0)">Benefits</a></li>
+								<li><a href="javascript:void(0)">Alumni Groups</a></li>
+								<li><a href="javascript:void(0)">Events</a></li>
+								<li><a href="javascript:void(0)">Inspiring Alumni</a></li>
+								<li><a href="javascript:void(0)">Support & Donate</a></li>
+								<li><a href="javascript:void(0)">Update Details</a></li> 
 							</ul>	
 
 			<li><a href="#" class="trigger-subnav">Business<span></span></a></li>
 							
 							<ul class="menu-expanded">	
-								<li><a href="#">Business</a></li>
-								<li><a href="#">Our Student & Graduate Talent</a></li>
-								<li><a href="#">Consultancy & Commissions </a></li>
-								<li><a href="#">Sponsorship & Partnerships</a></li>
-								<li><a href="#">Innovation & Research </a></li>
-								<li><a href="#">Training & Development</a></li>
-								<li><a href="#">Venue Hire & Conferences</a></li> 
+								<li><a href="javascript:void(0)">Business</a></li>
+								<li><a href="javascript:void(0)">Our Student & Graduate Talent</a></li>
+								<li><a href="javascript:void(0)">Consultancy & Commissions </a></li>
+								<li><a href="javascript:void(0)">Sponsorship & Partnerships</a></li>
+								<li><a href="javascript:void(0)">Innovation & Research </a></li>
+								<li><a href="javascript:void(0)">Training & Development</a></li>
+								<li><a href="javascript:void(0)">Venue Hire & Conferences</a></li> 
 							</ul>
 
 			<li><a href="#" class="trigger-subnav">About UAL<span></span></a></li>
 							
 							<ul class="menu-expanded">	
-								<li><a href="#">About UAL</a></li>
-								<li><a href="#">Contact UAL</a></li>
-								<li><a href="#">UAL Jobs</a></li>
-								<li><a href="#">Strategy & Governance</a></li>
-								<li><a href="#">Events</a></li>
-								<li><a href="#">UAL Awarding Body</a></li>
-								<li><a href="#">Press Office</a></li> 
-								<li><a href="#">UAL Showroom</a></li>
-								<li><a href="#">Collections & Galleries</a></li>
-								<li><a href="#">Teaching & Learning</a></li>
-								<li><a href="#">Diversity</a></li>
-								<li><a href="#">Progression Partnerships</a></li>
-								<li><a href="#">Environment & Sustainability</a></li>
-								<li><a href="#">Support Our Creative Future</a></li> 
+								<li><a href="javascript:void(0)">About UAL</a></li>
+								<li><a href="javascript:void(0)">Contact UAL</a></li>
+								<li><a href="javascript:void(0)">UAL Jobs</a></li>
+								<li><a href="javascript:void(0)">Strategy & Governance</a></li>
+								<li><a href="javascript:void(0)">Events</a></li>
+								<li><a href="javascript:void(0)">UAL Awarding Body</a></li>
+								<li><a href="javascript:void(0)">Press Office</a></li> 
+								<li><a href="javascript:void(0)">UAL Showroom</a></li>
+								<li><a href="javascript:void(0)">Collections & Galleries</a></li>
+								<li><a href="javascript:void(0)">Teaching & Learning</a></li>
+								<li><a href="javascript:void(0)">Diversity</a></li>
+								<li><a href="javascript:void(0)">Progression Partnerships</a></li>
+								<li><a href="javascript:void(0)">Environment & Sustainability</a></li>
+								<li><a href="javascript:void(0)">Support Our Creative Future</a></li> 
 							</ul>
 		</ul>
 		 
 	</div>
 </nav>
 
+
+<nav id="desktop-menu" class="global-menu desktop-menu"> 
+		<div class="close-button-wrap"> 
+			<a href="#" title="Close main menu" id="desktop-menu-close" class="menu-button menu-close">Close</a>
+		 
+		</div>
+		<div class="wrapper">
+		<ul> 
+			<li><a href="javascript:void(0)">Study</a></li>
+			<li><a href="javascript:void(0)">Research</a></li>
+			<li><a href="javascript:void(0)">Careers</a></li>
+			<li><a href="javascript:void(0)">Alumni & Friends</a></li>
+			<li><a href="javascript:void(0)">Business</a></li>
+			<li><a href="javascript:void(0)">About UAL</a></li>  
+		</ul>
+		</div>
+</nav>
+
 <nav id="csm-menu" class="global-menu csm-menu"> 
 		<ul>
-			<li><a href="#" id="csm-menu-close" class="menu-button menu-close">Close</a>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Courses</a></li>
-			<li><a href="#">What's on</a></li>
-			<li><a href="#">CSM Public</a></li>
-			<li><a href="#">Research</a></li> 
-			<li><a href="#">Business & Innovation</a></li> 
-			<li><a href="#">Drama Centre London</a></li> 
+			<li><a href="#" id="csm-menu-close" class="menu-button menu-close">Close</a></li>
+			<li><a href="javascript:void(0)">Home</a></li>
+			<li><a href="javascript:void(0)">About</a></li>
+			<li><a href="javascript:void(0)">Courses</a></li>
+			<li><a href="javascript:void(0)">What's on</a></li>
+			<li><a href="javascript:void(0)">CSM Public</a></li>
+			<li><a href="javascript:void(0)">Research</a></li> 
+			<li><a href="javascript:void(0)">Business & Innovation</a></li> 
+			<li><a href="javascript:void(0)">Drama Centre London</a></li> 
 		</ul>
 </nav>
