--- a/src/assets/scss/modules/_subsearch.scss
+++ b/src/assets/scss/modules/_subsearch.scss
@@ -20,15 +20,18 @@
 				border: 1px solid #e9e9e9;
 				width: 100%;
 				padding-left: rem(20);
+				text-transform: capitalize;
+				font-family: $font-bold;
+				font-size: rem(16);
 				@include media($small) {
 					width: 60%;
 				}
 
 			}
-			::-webkit-input-placeholder { color: black; opacity: 1 !important; font-size: rem(16); }
-			:-moz-placeholder { color: black; font-size: rem(16);}
-			::-moz-placeholder {color: black; font-size: rem(16);}
-			:-ms-input-placeholder {color: black; font-size: rem(16);}
+			::-webkit-input-placeholder { color: black; opacity: 1 !important; font-size: rem(16); font-family: $font-bold;}
+			:-moz-placeholder { color: black; font-size: rem(16);font-family: $font-bold;}
+			::-moz-placeholder {color: black; font-size: rem(16);font-family: $font-bold;}
+			:-ms-input-placeholder {color: black; font-size: rem(16);font-family: $font-bold;}
 
 			select {
 				width: 100%; 
@@ -38,6 +41,9 @@
 				font-size: rem(16);
 				margin-top: 3%;
 				padding-left: rem(15);
+				font-family: $font-bold;
+				outline: 0;
+
 				@include media($small) {
 					width: 17%;
 					margin-left: 1%;
@@ -52,7 +58,10 @@
 					font-size: rem(16);
 					padding: rem(5);
 					padding-left: rem(20);
+					font-family: $font-bold;
+					outline: 0;
 				}
+ 
 
 			}
 			.button {
