STUDY + STUDENT FEES PAGES. Slide down UAL GLOBAL MENU for DESKTOP built. Various tweaks.

--- a/src/assets/scss/pages/_studentfees.scss
+++ b/src/assets/scss/pages/_studentfees.scss
@@ -1,8 +1,18 @@
 // =============================================================================
-//	PAGES
+//	STUDENT FEES
 // =============================================================================
-@import
-	'home',
-	'csm',
-	'study',
-	'studentfees';
+
+
+#studentfees {
+
+	a:hover,a:active {
+		color: #e5006e;
+	}
+
+	.button:hover {
+		background-color: #e5006e;
+	}
+
+	 
+	
+}
