--- a/src/assets/scss/pages/_study.scss
+++ b/src/assets/scss/pages/_study.scss
@@ -1,8 +1,18 @@
 // =============================================================================
-//	PAGES
+//	STUDY PAGE
 // =============================================================================
-@import
-	'home',
-	'csm',
-	'study',
-	'studentfees';
+
+
+#study {
+
+	a:hover,a:active {
+		color: #e5006e;
+	}
+
+	.button:hover {
+		background-color: #e5006e;
+	}
+
+	 
+	
+}
