--- a/src/assets/scss/modules/_heros.scss
+++ b/src/assets/scss/modules/_heros.scss
@@ -1,7 +1,9 @@
 // =============================================================================
 //  HEROS
 // =============================================================================
-
+.hero-master {
+	z-index: 1;
+}
 .hero-wrap {
 	min-height: 519px;
 	width: 100%; 
@@ -11,6 +13,7 @@
     .hero-master & {
     	max-width: 1440px;
     	margin: auto;
+    	z-index: 1;
     }
 }
 
