--- a/src/assets/scss/modules/_placeholder.scss
+++ b/src/assets/scss/modules/_placeholder.scss
@@ -40,3 +40,35 @@
 		}
  
 	}
+
+
+	.placeholderx2 {
+		margin-top: rem(0);
+		@include media($small) {
+			margin-top: rem(60);
+		}
+
+		.wrapper {
+			width: 100%;
+			@include media($small) {
+			width: inherit;
+			}	
+		}
+		.inner-content {
+			margin: auto;
+			text-align: center;
+		}
+		.content-desktop {
+			display: none;
+			@include media($small) {
+				display: block;
+			}
+		} 
+		.content-mobile {
+			display: block;
+			@include media($small) {
+				display: none;
+			}
+		}
+ 
+	}
