--- a/src/template/pages/index.hbs
+++ b/src/template/pages/index.hbs
@@ -71,7 +71,7 @@
 			<div class="panel-container">
 			<div class="left panel">
 				<a href="#" title="Camberwell College of Arts">Camberwell College of Arts</a>
-				<a href="#" title="Central Saint Martins">Central Saint Martins</a>
+				<a href="./csm.html" title="Central Saint Martins">Central Saint Martins</a>
 				<a href="#" title="Central Saint Martins">Chelsea College of Arts</a>
 			</div>
 			<div class="right panel">
