--- a/src/template/pages/studentfees.hbs
+++ b/src/template/pages/studentfees.hbs
@@ -19,6 +19,17 @@
 
 	<div class="main-content">
 
+		<div class="wrapper placeholderx2">
+
+			<div class="inner-content content-desktop">
+				 <img src="assets/img/static-imgs/studentfees-content.jpg">
+			</div>
+	 
+			<div class="inner-content content-mobile">
+				 <img src="assets/img/static-imgs/studentfees-content-mob.jpg">
+			</div> 
+		</div> 
+
 
 	</div>
 
