--- a/src/template/pages/study.hbs
+++ b/src/template/pages/study.hbs
@@ -31,6 +31,18 @@
 	</nav>
 
 	<div class="main-content">
+ 
+		<div class="wrapper placeholderx2">
+
+			<div class="inner-content content-desktop">
+				 <img src="assets/img/static-imgs/study-content.jpg">
+			</div>
+	 
+			<div class="inner-content content-mobile">
+				 <img src="assets/img/static-imgs/study-content-mob.jpg">
+			</div> 
+		</div> 
+
 
 
 	</div>
