--- a/src/template/partials/global/header.hbs
+++ b/src/template/partials/global/header.hbs
@@ -4,7 +4,7 @@
 
 	<nav>
 		<a href="#" id="trigger-menu-mobile" class="nav-mobile" title="Navigation"></a>
-		<a href="http://www.arts.ac.uk/" title="University of the Arts London website">
+		<a href="./index.html" title="University of the Arts London website">
 			<img src="assets/img/logo-white-36px.png" alt="University of the Arts London logo" class="logo-desktop"> 
 			<img src="assets/img/logo-sm.png" alt="University of the Arts London logo" class="logo-mobile"> 
 		</a> 
@@ -16,6 +16,8 @@
 			<li class="hidden-desktop"><a href="#">Alumni & Friends</a></li>
 			<li class="hidden-desktop"><a href="#">Business</a></li>
 			<li class="hidden-desktop"><a href="#">About UAL</a></li> 
+		</ul>
+		<ul class="meganav-master">
 			<li><a href="#" class="mega nav-courses" id="trigger-menu-course">Courses</a></li>
 			<li><a href="#" class="mega nav-colleges" id="trigger-menu-colleges">Colleges</a></li>
 			<li><a href="#" class="mega search" id="trigger-menu-search"><span></span></a></li>
