--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -55,7 +55,7 @@ $block-light-gray: #f2f2f2;
 
 // Font Colors
 $base-background-color: #fff;
-$base-font-color: #2f2f2f;
+$base-font-color: black;
 $very-light-font-color: #ccc;
 $light-font-color: #777;
 $action-color: #7b7b7b;
