--- a/src/assets/scss/modules/global/_menu.scss
+++ b/src/assets/scss/modules/global/_menu.scss
@@ -87,7 +87,34 @@
 				}
 			}
 
-			
+
+			&.camberwell span {
+				font-family: 'BrandonText-Bold';
+				font-size: rem(22);
+			}
+			&.csm span {
+				font-family: 'Levi';
+				font-size: rem(18);
+				text-transform: uppercase;
+			}
+			&.chelsea span {
+				font-family: 'BrandonText-Bold';
+				font-size: rem(22);
+			}
+			&.comm span {
+				font-family: 'Goth';
+				font-size: rem(30);
+				text-transform: uppercase;
+			}
+			&.fashion span {
+				font-family: 'Swiss-Black';
+				font-size: rem(17);
+				text-transform: uppercase;
+			}
+			&.wimbledon span {
+				font-family: 'BrandonText-Bold';
+				font-size: rem(22);
+			}
 			
 
 
@@ -348,6 +375,10 @@
 					font-size: rem(16);
 					color: black;
 					padding: rem(10) 0;
+
+					&.active {
+						color: #e5006e;
+					}
 				}
 
 			}
@@ -386,8 +417,7 @@
 	 	ul {
 	 		width: 100% !important;
 	 		margin: 2%;
-	 		padding: 0;
-	 		float: left;
+	 		padding: 0; 
 	 		margin: 0% 1% 1% 0; 
 
 
@@ -450,7 +480,7 @@
 
 	 		&.hidden {
 	 			display: none;
-	 		}
+	 		} 
 
 
 			li {
@@ -459,8 +489,13 @@
 					font-family: $font-std;
 					border-bottom: 1px solid #cccccc;
 					width: 90%; 
+					&.active {
+						color: #e5006e ;
+					}
 					
 				}
+
+
 
 				&:last-child a {
 					 border-bottom: 0px solid #cccccc;
