--- a/src/template/layouts/home.hbs
+++ b/src/template/layouts/home.hbs
@@ -7,8 +7,8 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  	
-	<link href="../assets/css/app.css" rel="stylesheet">
-	<script src="../assets/js/vendor/modernizr.js"></script>
+	<link href="assets/css/app.css" rel="stylesheet">
+	<script src="assets/js/vendor/modernizr.js"></script>
 
 	{{> fonts }}
 	
@@ -41,8 +41,8 @@
 
 
 	<!--[if gt IE 8]><!-->
-	<script src="../assets/js/vendor.js"></script>
-	<script src="../assets/js/app.js"></script>
+	<script src="assets/js/vendor.js"></script>
+	<script src="assets/js/app.js"></script>
 	<!--<![endif]-->
 
 
