--- a/src/template/pages/csm.hbs
+++ b/src/template/pages/csm.hbs
@@ -42,7 +42,7 @@
 <div class="wrapper">
 
 	<div class="subsearch-block"> 
-		<input placeholder="Find courses at UAL" />
+		<input placeholder="Find courses at Central Saint Martins" />
 		<select>
 			<option>Level</option>
 			<option>Level 2</option>
