--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -209,7 +209,7 @@
 		</div>
 		<div class="wrapper">
 		<ul> 
-			<li><a href="javascript:void(0)">Study</a></li>
+			<li><a href="study.html">Study</a></li>
 			<li><a href="javascript:void(0)">Research</a></li>
 			<li><a href="javascript:void(0)">Careers</a></li>
 			<li><a href="javascript:void(0)">Alumni & Friends</a></li>
@@ -222,8 +222,8 @@
 <nav id="csm-menu" class="global-menu csm-menu"> 
 		<ul>
 			<li><a href="#" id="csm-menu-close" class="menu-button menu-close">Close</a></li>
-			<li><a href="javascript:void(0)">Home</a></li>
-			<li><a href="javascript:void(0)">About</a></li>
+			<li><a href="csm.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
 			<li><a href="javascript:void(0)">Courses</a></li>
 			<li><a href="javascript:void(0)">What's on</a></li>
 			<li><a href="javascript:void(0)">CSM Public</a></li>
