--- a/src/assets/scss/modules/_course-type.scss
+++ b/src/assets/scss/modules/_course-type.scss
@@ -1,6 +1,7 @@
 #section-course-type {
 
 		margin-top: rem(40);
+		margin-bottom: rem(40);
 
 		.wrapper {
 			width: 100%;
@@ -19,6 +20,15 @@
 				background-color: #f5f5f5;
 
 				@include media($small) {
+					width: 43%;
+					margin: 1% 0 1% 1%;
+					float: left; 
+					background-color: transparent;
+
+					 
+				}
+
+				@include media($medium) {
 					width: 23%;
 					margin: 1%;
 					float: left; 
@@ -28,6 +38,7 @@
 						margin-left: 0;
 					}
 				}
+
 
 				a {
 					font-family: $font-bold;
