--- a/src/assets/scss/modules/_sidenav.scss
+++ b/src/assets/scss/modules/_sidenav.scss
@@ -11,11 +11,14 @@
 		
 	}
 	ul {
-		margin: rem(40) 0;
+		margin: rem(40) 0 0;
 		padding-left: 7%;
 		padding-right: 7%;
 	    background-color: #f5f5f5;
 	    width: 100%; 
+	    &:nth-child(2) {
+	    	margin-top: rem(20);
+	    }
 	}
 	li {
 		 
