--- a/src/template/pages/csm.hbs
+++ b/src/template/pages/csm.hbs
@@ -3,10 +3,10 @@
 	
 	<div class="hero-nav">
 		<div class="hero-nav-inner">
-		<h1>Central Saint Martins</h1>
+		<h1><a href="csm.html">Central Saint Martins</a></h1>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="csm.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
 			<li><a href="#">Courses</a></li>
 			<li><a href="#">What's on</a></li>
 			<li><a href="#">CSM Public</a></li>
