--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -1,9 +1,10 @@
 // =============================================================================
-//	PAGES
+//	ABOUT PAGE
 // =============================================================================
-@import
-	'home',
-	'csm',
-	'about',
-	'study',
-	'studentfees';
+
+
+#about {
+ 
+	 
+	
+}
