--- a/src/assets/scss/pages/_csm.scss
+++ b/src/assets/scss/pages/_csm.scss
@@ -56,6 +56,10 @@
  		font-size: rem(18);
  		text-align: center;
  	}
+ 	.page-title {
+	 	font-family: 'Levi';
+	 	font-size: rem(36);
+	 }
  	.button-container {
  		margin: auto; 
  		text-align: center;
