--- a/src/template/layouts/csm.hbs
+++ b/src/template/layouts/csm.hbs
@@ -41,8 +41,8 @@
 
 
 	<!--[if gt IE 8]><!-->
-	<script src="../assets/js/vendor.js"></script>
-	<script src="../assets/js/app.js"></script>
+	<script src="assets/js/vendor.js"></script>
+	<script src="assets/js/app.js"></script>
 	<!--<![endif]-->
 
 
