--- a/src/template/pages/index.hbs
+++ b/src/template/pages/index.hbs
@@ -26,10 +26,10 @@
 		<input placeholder="Find courses at UAL" />
 		<select>
 			<option>Level</option>
-			<option>Level 2</option>
-			<option>Level 3</option>
-			<option>Level 4</option>
-			<option>Level 5</option>
+			<option>Foundation</option>
+			<option>Undergraduate</option>
+			<option>Postgraduate</option>
+			<option>Short Course</option>
 		</select>
 		<a href="#" class="button">Search</a>
 	</div>
