Various amends - Footer content. Search added in MOB MENU. Removed from HEADER, MOB. Hover status added to "Prev" breadcrumb icon, padding reduced. Border/BG color to CSM Menu. Search icon rollover states. Opaque Black BG on MOBILE MENU. etc

--- a/src/assets/scss/modules/global/_header.scss
+++ b/src/assets/scss/modules/global/_header.scss
@@ -122,18 +122,24 @@
 					}
 
 					&.search {
-						
+						display: none;
 						 
 						@include media($small) { 
-							 
+							display: block; 
 							border-right: 1px solid #373737; 
 						}
 						span {
-							background: transparent url(../img/icon-search.png) no-repeat;
+							background: transparent url(../img/icon-search-w.png) no-repeat;
 							display: inline-block;
 							width: 15px;
 							height: 16px;
+
+							
 						}
+
+						&:hover span {
+								background: transparent url(../img/icon-search-p.png) no-repeat;
+							}
 
 					}
 
