--- a/src/template/pages/studentfees.hbs
+++ b/src/template/pages/studentfees.hbs
@@ -4,10 +4,10 @@
 	<nav class="sidenav">
 	<ul class="breadcrumb">
 		<li class="lead"><a href="#" class="prev" id="breadcrumb-toggle">< Previous <span id="breadcrumb-icon"></span></a></li>
-		<li class="last history-item"><a href="./study.html">Study</a></li>
+		<li class="last history-item"><a href="study.html">Study</a></li>
 	</ul>
 	<ul>	
-		<li><a href="study.html" class="active">Student Fees & Funding</a></li>
+		<li><a href="studentfees.html" class="active">Student Fees & Funding</a></li>
 		<li><a href="javascript:void(0)" class="subsub">Tuition Fees</a></li>
 		<li><a href="javascript:void(0)" class="subsub">Further Education Funding</a></li>
 		<li><a href="javascript:void(0)" class="subsub">Undergraduate Funding</a></li>
