--- a/src/template/partials/global/header.hbs
+++ b/src/template/partials/global/header.hbs
@@ -10,7 +10,7 @@
 		</a> 
 		
 		<ul> 
-			<li class="hidden-desktop"><a href="#" id="trigger-menu-study" class="{{#is page.basename "study" }}active{{/is}}">Study</a></li>
+			<li class="hidden-desktop"><a href="#" id="trigger-menu-study" class="{{#is page.basename "study" }}active{{/is}}{{#is page.basename "studentfees" }}active{{/is}}">Study</a></li>
 			<li class="hidden-desktop"><a href="#">Research</a></li>
 			<li class="hidden-desktop"><a href="#">Careers</a></li>
 			<li class="hidden-desktop"><a href="#">Alumni & Friends</a></li>
