--- a/src/assets/scss/modules/_screen-overlay.scss
+++ b/src/assets/scss/modules/_screen-overlay.scss
@@ -1,15 +1,16 @@
 // =============================================================================
-//  PAGE OVERLAY
+//  SCREEN OVERLAY
 // =============================================================================
 
-.page-overlay {
+.screen-overlay {
+	display: none;
 	position: fixed;
-	z-index: 9999;
+	z-index: 50;
 	margin-top: -56px;
 	width: 100%;
 	height: 100%;
-	height: calc(100% + 56px);
-	background-color: white;
+	height:100%;
+	background-color: rgba(0, 0, 0, 0.9);
 
 	.no-js & {
 		display: none;
