--- a/src/assets/scss/modules/_sidenav.scss
+++ b/src/assets/scss/modules/_sidenav.scss
@@ -17,15 +17,18 @@
 	    background-color: #f5f5f5;
 	    width: 100%; 
 	    &:nth-child(2) {
-	    	margin-top: rem(20);
+	    	margin-top: rem(10);
 	    }
 	}
 	li {
 		 
     	position: relative;
-    	border-bottom: 1px solid #dedede;
+    	
     	&.last {
     		border-bottom: 0;
+    	}
+    	&.border {
+    		border-bottom: 1px solid #dedede;
     	}
 	}
 	a {
@@ -55,7 +58,7 @@
 			a {
 				position: relative;
 				span {
-					background: url(../img/icon-plus-p.png) no-repeat;
+					background: url(../img/icon-plus.png) no-repeat;
 					display: inline-block;
 					position: absolute;
 					right: 10px;
@@ -69,6 +72,10 @@
 					&.history-item {
 						display: none;
 					}
+				}
+
+				&:hover span {
+					background: url(../img/icon-plus-p.png) no-repeat;
 				}
 			}
 		}
