--- a/src/assets/scss/modules/global/_menu.scss
+++ b/src/assets/scss/modules/global/_menu.scss
@@ -232,8 +232,8 @@
 		margin-top: rem(80); 
 
 		@include media($small) {
-			@include vertical-align;
-			 margin-top: rem(0); 
+			 
+			 margin-top: rem(80); 
 			 text-align: left;
 			
 		}
@@ -314,6 +314,12 @@
 				background-color: #e5006e;
 				color: $white !important; 
 			}
+		}
+		p {
+			margin-top: rem(20);
+		}
+		.viewall {;
+			color: white;
 		}
 	}
 }
@@ -404,6 +410,27 @@
 	    left: 10px;
 	    z-index: 40000;
 	}
+	.search-container {
+		background-color: #f5f5f5;
+
+		input {
+			width: 100%;
+			background-color: transparent;
+			border: 0;
+			margin-left: 7%;
+			padding: rem(15) 0;
+			font-family: $font-bold;
+			&:focus {
+				outline: 0;
+			}
+		}	
+
+		::-webkit-input-placeholder { color: black;  font-family: $font-bold; }
+		:-moz-placeholder { color: black; font-family: $font-bold; }
+		::-moz-placeholder {  color: black; font-family: $font-bold; }
+		:-ms-input-placeholder { color: black;  font-family: $font-bold; }
+	}
+	
 	 
 	.menu-content {
 		height: 100%;
@@ -424,12 +451,12 @@
 
 	 		@include media($small) {
 				width: 22%;
-	 			margin: 1% 3% 1% 0;
+	 			margin: 0% 3% 1% 0;
 			} 
 
 			@include media($medium) {
 				width: 23%;
-	 			margin: 1% 1% 1% 0; 
+	 			margin: 0% 1% 1% 0; 
 			} 
 
 			li {
@@ -510,7 +537,7 @@
 	top: 45px;
 	height: 45px;
 	width: 100%;
-	background-color: white; 
+	background-color: #f5f5f5; 
 	color: black;
 
 	.close-button-wrap {
@@ -572,6 +599,7 @@
 .csm-menu {
 	height: 100%;
 	background-color: white;
+	
 
 	.menu-close {
 		position: relative;
@@ -596,7 +624,9 @@
 				color: black;
 				font-family:  $font-bold;
 				border-bottom: 1px solid #d1d1d1;
-				
+				&.active {
+					color: #d10000;
+				}
 			}
 		}
 	}
