--- a/src/assets/scss/pages/_csm.scss
+++ b/src/assets/scss/pages/_csm.scss
@@ -14,6 +14,10 @@
 		background-color: #d10000;
 	}
 
+	.global-header nav a.search:hover span {
+		background: transparent url(../img/icon-search-r.png) no-repeat;
+	}
+
 	.hero-nav { 
 
 		h1 a {
@@ -123,6 +127,10 @@
 
 			.button-container a {
 		 		width: 160px;
+		 		background-color: transparent;
+		 		&:hover {
+		 			color: #d10000 !important;
+		 		}
 		 	}
 
 		}
