--- a/src/template/pages/about.hbs
+++ b/src/template/pages/about.hbs
@@ -7,7 +7,7 @@
 		<h1><a href="csm.html">Central Saint Martins</a></h1>
 		<ul>
 			<li><a href="csm.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="about.html" class="active">About</a></li>
 			<li><a href="#">Courses</a></li>
 			<li><a href="#">What's on</a></li>
 			<li><a href="#">CSM Public</a></li>
