--- a/src/template/partials/global/footer.hbs
+++ b/src/template/partials/global/footer.hbs
@@ -1,7 +1,7 @@
 <!-- UAL Third-Party Footer -->
 <footer class="ual-footer" role="contentinfo">
-	<div class="wrapper">
-		<div class="copyright">
+	<div class="wrapper placeholder">
+		<!-- <div class="copyright">
 			<p>&copy; University of the Arts London</p>
 		</div>
 		<div class="footer-links">
@@ -9,7 +9,17 @@
 				<li><a href="http://www.arts.ac.uk/privacy-and-cookies/">Privacy &amp; Cookies</a></li>
 				<li><a href="http://www.arts.ac.uk/disclaimer/">Disclaimer</a></li>
 			</ul>
-		</div>
+		</div> -->
+
+			<div class="inner-content content-desktop">
+				 <img src="assets/img/static-imgs/footer.jpg">
+			</div> 
+			<div class="inner-content content-tablet">
+				 <img src="assets/img/static-imgs/footer-ipad.jpg">
+			</div> 
+			<div class="inner-content content-mobile">
+				 <img src="assets/img/static-imgs/footer-mob.jpg">
+			</div> 
 	</div>
 </footer>
  
